modify md